ajust sonar issue