@@ -5,23 +5,24 @@ import br.com.clientes.cadastro.domain.Cliente;
 import br.com.clientes.cadastro.usecase.GerenciarClienteUsecase;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("api/v1/clientes")
 @RequiredArgsConstructor
+@Slf4j
 public class ClienteController {
 
 	private final GerenciarClienteUsecase gerenciarClienteUsecase;
 
 	@PostMapping
 	public ResponseEntity<String> cadastrar(@Valid @RequestBody ClienteJson clienteJson) {
-		System.out.println("Cliente a ser salvo: " + clienteJson.getCpf());
+		log.info("Cliente a ser salvo: " + clienteJson.getCpf());
 		gerenciarClienteUsecase.cadastrarCliente(mapToDomain(clienteJson));
 		return ResponseEntity.ok("Cliente cadastrado com sucesso!");
 	}
@@ -29,21 +30,21 @@ public class ClienteController {
 	@GetMapping("/{cpf}")
 	public ResponseEntity<ClienteJson> buscarClientePorCpf(@PathVariable String cpf) {
 		List<Cliente> clientes = gerenciarClienteUsecase.buscarClientePorCpf(cpf);
-		List<ClienteJson> clienteJsons = clientes.stream().map(this::mapToJson).collect(Collectors.toList());
+		List<ClienteJson> clienteJsons = clientes.stream().map(this::mapToJson).toList();
 		return ResponseEntity.ok(clienteJsons.getFirst());
 	}
 
 	@GetMapping("nome/{nome}")
 	public ResponseEntity<List<ClienteJson>> buscarClientePorNome(@PathVariable String nome) {
 		List<Cliente> clientes = gerenciarClienteUsecase.buscarClientePorNome(nome);
-		List<ClienteJson> clienteJsons = clientes.stream().map(this::mapToJson).collect(Collectors.toList());
+		List<ClienteJson> clienteJsons = clientes.stream().map(this::mapToJson).toList();
 		return ResponseEntity.ok(clienteJsons);
 	}
 
 	@GetMapping("cep/{cep}")
 	public ResponseEntity<List<ClienteJson>> buscarClientePorCep(@PathVariable String cep) {
 		List<Cliente> clientes = gerenciarClienteUsecase.buscarClientePorCep(cep);
-		List<ClienteJson> clienteJsons = clientes.stream().map(this::mapToJson).collect(Collectors.toList());
+		List<ClienteJson> clienteJsons = clientes.stream().map(this::mapToJson).toList();
 		return ResponseEntity.ok(clienteJsons);
 	}
 
